Fix stuff jumping around.

--- a/Styles/_03_universal.scss
+++ b/Styles/_03_universal.scss
@@ -53,4 +53,5 @@
 .play-button{
    display: inline-block;
    width: 35px;
+   min-width: 35px;
 }
